more list functionality
- delete list
- list items of list
- update list item
- delete list item
