# api/description/api.yml
@@ -138,8 +138,35 @@ paths:
             application/json:
               schema: 
                 $ref: "#/components/schemas/Error"
-        
-      
+    delete: 
+      summary: Delete a list
+      operationId: userDeleteList
+      parameters: 
+        - $ref: "#/components/parameters/pathListID"
+      responses: 
+        '200':
+          description: OK
+        '4xx':
+          description: error
+          content: 
+            application/json:
+              schema: 
+                $ref: "#/components/schemas/Error"
+  /user/lists/{list_id}/items:
+    get:
+      summary: Get items of a List
+      operationId: listItems
+      parameters:
+        - $ref: "#/components/parameters/pathListID"
+      responses: 
+        '200':
+          description: OK
+          content: 
+            application/json:
+              schema: 
+                type: array
+                items: 
+                  $ref: "#/components/schemas/ListItem"
     post: 
       summary: Add item to list
       operationId: listAddItem
@@ -159,7 +186,46 @@ paths:
             application/json:
               schema: 
                 $ref: "#/components/schemas/Error"
-  
+  /user/lists/{list_id}/items/{item_id}:
+    patch:
+      summary: Update one item of a List
+      operationId: updateListItem
+      parameters:
+        - $ref: "#/components/parameters/pathListID"
+        - $ref: "#/components/parameters/pathItemID"
+      requestBody:
+        content: 
+          application/json:
+            schema: 
+              $ref: "#/components/schemas/ListItemUpdateRequest"
+      responses: 
+        '200':
+          description: OK
+          content: 
+            application/json:
+              schema: 
+                $ref: "#/components/schemas/ListItem"                
+        '4xx':
+          description: error
+          content: 
+            application/json:
+              schema: 
+                $ref: "#/components/schemas/Error"        
+    delete: 
+      summary: Delete an item
+      operationId: deleteListItem
+      parameters: 
+        - $ref: "#/components/parameters/pathListID"
+        - $ref: "#/components/parameters/pathItemID"
+      responses: 
+        '200':
+          description: OK
+        '4xx':
+          description: error
+          content: 
+            application/json:
+              schema: 
+                $ref: "#/components/schemas/Error"        
 
 security: []
 components: 
@@ -227,6 +293,21 @@ components:
         updated_at:
           type: string
           x-go-type: time.Time
+    ListItem:
+      type: object
+      required: [id, body, created_at, updated_at]
+      properties: 
+        id:
+          type: integer
+          x-go-type: int64
+        body:
+          type: string
+        created_at:
+          type: string
+          x-go-type: time.Time
+        updated_at:
+          type: string
+          x-go-type: time.Time
     ListCreateRequest:
       type: object
       required: [title, description]
@@ -243,7 +324,8 @@ components:
       properties: 
         body:
           type: string
-
+    ListItemUpdateRequest:
+      $ref: "#/components/schemas/AddItemToListRequest"
   parameters: 
     pathListID:
         in: path
@@ -252,6 +334,13 @@ components:
           type: integer
         required: true
         description: ID of the list
+    pathItemID:
+        in: path
+        name: item_id
+        schema: 
+          type: integer
+        required: true
+        description: ID of the list item
 
   securitySchemes:
     bearerAuth:            # arbitrary name for the security scheme
